# android-ndk-pitfalls

./: README.md
exception/: CMakeLists.txt  main.cpp  odr_test.map.txt  test.sh
exception/shared/: CMakeLists.txt
